Rev 1.4 - 13-08-25: * Revised/Improved footer end line * Connected Book Now button to  Booking.com page link * Connected accurate Social Media links * Email changed from sales to reservations@transit-tower.com * Call feature changed to whatsapp call with correct number 7491500 * Layout screen will fit to every device screen * Sidebar links neatly organized with gaps/spaces

--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -55,13 +55,22 @@
 }
 
 /* Global Styles */
-body {
-    font-family: 'Open Sans', sans-serif;
+* {
     margin: 0;
     padding: 0;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    background-color: #f4f4f4;
-    color: #333;
+}
+
+/* HTML & Body Standard */
+html, body {
+    height: 100%;
+    background: var(--bg-color-accent);
+    color: var(--text-color);
+}
+body {
+    font-family: 'Open Sans', sans-serif;
+    min-height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 footer {
@@ -420,15 +429,24 @@ h4 {
 }
 
 footer p, footer a {
+    color: black;
     font-size: var(--font-xs);
     line-height: 1.6;
+}
+
+footer a {
+    text-decoration: none;
+    font-weight: var(--font-weight-medium);
+}
+
+footer a:hover {
     color: white;
 }
 
-footer h1, footer h2, footer h3 {
+footer h3 {
+    color: black;
     font-size: var(--font-s);
     line-height: 1.4;
-    color: white; /* Ensure footer headings are white */
 }
 
 
